[project]
name = "claim-processing-pipeline"
version = "0.1.0"
description = "FastAPI + LangGraph service for claim PDF processing"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.60",
  "langchain-openai>=0.2.14",
  "pydantic-settings>=2.6.1",
  "pypdf>=5.1.0",
  "pytesseract>=0.3.10",
  "Pillow>=10.4.0",
  "python-multipart>=0.0.18",
  "uvicorn[standard]>=0.32.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
